[gd_scene load_steps=8 format=3 uid="uid://r2w46qikxe74"]

[ext_resource type="Script" path="res://WildJam_64/LEVELS/Main_Menu/Main_Menu_Script.gd" id="1_cu2dk"]
[ext_resource type="PackedScene" uid="uid://2n7f7uirl8hb" path="res://WildJam_64/LEVELS/Level_One/LevelOne.tscn" id="2_kkn3k"]
[ext_resource type="PackedScene" uid="uid://bsbl7c8pnwee" path="res://WildJam_64/LEVELS/Dev_room/TheQueefsRoom/TQDev_room.tscn" id="3_kpcb1"]
[ext_resource type="AudioStream" uid="uid://caom8da58a3ym" path="res://WildJam_64/AUDIO/p-hub-intro.mp3" id="4_cjln1"]

[sub_resource type="Animation" id="Animation_blslf"]
length = 0.001

[sub_resource type="Animation" id="Animation_qmn0g"]
resource_name = "credits_scale"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuContainer/MenuButtons:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(544.5, 273.5), Vector2(7.00012, 527)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuContainer/MenuButtons:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(0.25, 0.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CreditsScreen:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1204, 268), Vector2(597, 67)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CreditsScreen:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(12.0494, 12.0494), Vector2(12.0494, 12.0494)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e4oci"]
_data = {
"RESET": SubResource("Animation_blslf"),
"credits_scale": SubResource("Animation_qmn0g")
}

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cu2dk")
Start_Scene = ExtResource("2_kkn3k")
personal_Dev_Room = ExtResource("3_kpcb1")

[node name="PlaceHolder" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -537.0
offset_top = -291.0
offset_right = -449.0
offset_bottom = -265.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e4oci")
}

[node name="CreditsScreen" type="Panel" parent="."]
layout_mode = 0
offset_left = 1204.0
offset_top = 268.0
offset_right = 1244.0
offset_bottom = 308.0
scale = Vector2(12.0494, 12.0494)

[node name="creditsScreen" type="Label" parent="CreditsScreen"]
layout_mode = 0
offset_left = 3.98361
offset_top = 18.5902
offset_right = 260.984
offset_bottom = 58.5902
scale = Vector2(0.143489, 0.143489)
text = "Just put something cool here
"

[node name="MenuContainer" type="Container" parent="."]
layout_mode = 1

[node name="MenuButtons" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="START" type="Button" parent="MenuContainer/MenuButtons"]
layout_mode = 2
text = "Start"

[node name="CREDITS" type="Button" parent="MenuContainer/MenuButtons"]
layout_mode = 2
text = "Credits
"

[node name="EXIT" type="Button" parent="MenuContainer/MenuButtons"]
layout_mode = 2
text = "Exit
"

[node name="Thank you!" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.5
offset_top = -13.0
offset_right = 157.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.482353, 0.65098, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Thank you for playing and enjoy the Jam!
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_cjln1")

[connection signal="pressed" from="MenuContainer/MenuButtons/START" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtons/CREDITS" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtons/EXIT" to="." method="_on_exit_pressed"]
